--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<DOCTYPE html><html><head><title>Redirect</title><meta http-equiv="refresh" content="0;URL=/dist/index.html"></head><body></body></html>
+<DOCTYPE html><html><head><title>Redirect</title><meta http-equiv="refresh" content="0;URL=/Telegram-Bot-Node/dist/dist/index.html"></head><body></body></html>
